--- a/newTab.html
+++ b/newTab.html
@@ -14,8 +14,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <img class="masthead-brand" src="img/misc/NASAlogo.png" alt="Nasa Logo"
-                    style="height: 2rem; width: auto; cursor: context-menu;">
+                <h3 class="masthead-brand" id='date' style="cursor: context-menu">Date</h3>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link" href="https://mail.google.com/mail/"><i class="fa fa-envelope"></i> Gmail</a>
                     <a class="nav-link" href="https://www.google.ca/imghp?hl=en&tab=ri&authuser=0&ogbl"><i
