--- a/newTab.html
+++ b/newTab.html
@@ -120,9 +120,9 @@
 
         <footer class="mastfoot mt-auto mb-2">
             <div class="inner text-center">
-                <a id="imagelink" style="text-decoration: none;" src='https://apod.nasa.gov/apod/astropix.html'>
+                <a href="https://apod.nasa.gov/apod/astropix.html" style="text-decoration: none;">
                     <h5 id='title' class="text-center" data-toggle="tooltip"
-                        title="Click here for more information about current image and past images."></h5>
+                        title="Click here for more information about current image and past images.">Loading</h5>
                 </a>
             </div>
         </footer>
