--- a/newTab.html
+++ b/newTab.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="https://www.google.ca/imghp?hl=en&tab=ri&authuser=0&ogbl"><i
                             class="fa fa-image"></i> Images</a>
                     <a id="goToApps" class="nav-link" href="#"><i class="fa fa-th"></i> Apps</a>
-                    <a id="goToDefault" class="nav-link" href="#"><i class="fa fa-home"></i> Default</a>
+                    <a id="goToDefault" class="nav-link"><i class="fa fa-chrome"></i> Chrome Tab</a>
                 </nav>
             </div>
         </header>
