--- a/newTab.html
+++ b/newTab.html
@@ -14,11 +14,11 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand" id='date' style="cursor: context-menu">Date</h3>
+                <h4 class="masthead-brand" id='date' style="cursor: context-menu">Date</h4>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link" href="https://mail.google.com/mail/"><i class="fa fa-envelope"></i> Gmail</a>
-                    <a class="nav-link" href="https://www.google.ca/imghp?hl=en&tab=ri&authuser=0&ogbl"><i
-                            class="fa fa-image"></i> Images</a>
+                    <!-- <a class="nav-link" href="https://www.google.ca/imghp?hl=en&tab=ri&authuser=0&ogbl"><i
+                            class="fa fa-image"></i> Images</a> -->
                     <a id="goToApps" class="nav-link" href="#"><i class="fa fa-th"></i> Apps</a>
                     <a id="goToDefault" class="nav-link"><i class="fa fa-chrome"></i> Chrome Tab</a>
                 </nav>
@@ -138,6 +138,7 @@
 <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
 
+<script src="src/datetimer.js"></script>
 <script src="src/goto.js"></script>
 <script src="src/setimage.js"></script>
 <script src="src/setfavorites.js"></script>
