--- a/newTab.html
+++ b/newTab.html
@@ -17,8 +17,6 @@
                 <h4 class="masthead-brand" id='date' style="cursor: context-menu">Date</h4>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link" href="https://mail.google.com/mail/"><i class="fa fa-envelope"></i> Gmail</a>
-                    <!-- <a class="nav-link" href="https://www.google.ca/imghp?hl=en&tab=ri&authuser=0&ogbl"><i
-                            class="fa fa-image"></i> Images</a> -->
                     <a id="goToApps" class="nav-link" href="#"><i class="fa fa-th"></i> Apps</a>
                     <a id="goToDefault" class="nav-link"><i class="fa fa-chrome"></i> Chrome Tab</a>
                 </nav>
@@ -28,7 +26,7 @@
         <main role="main" class="inner cover">
             <div class="row mb-4">
                 <div class="col">
-                    <h1 class="cover-heading" style="font-size: 540%; cursor: context-menu;">Google</h1>
+                    <h1 id="time" class="cover-heading" style="font-size: 540%; cursor: context-menu;">Google</h1>
                 </div>
             </div>
             <div class="row">
