--- a/newTab.html
+++ b/newTab.html
@@ -29,7 +29,7 @@
             <div class="row mb-4">
                 <div class="col-auto align-self-center">
                     <div id="left" class="favorite">
-                        <i class="fa fa-chevron-left"></i>
+                        <i class="fa fa-chevron-left fa-lg"></i>
                     </div>
                 </div>
 
@@ -39,7 +39,7 @@
 
                 <div class="col-auto align-self-center">
                     <div id="right" class="favorite">
-                        <i class="fa fa-chevron-right"></i>
+                        <i class="fa fa-chevron-right fa-lg"></i>
                     </div>
                 </div>
             </div>
