--- a/newTab.html
+++ b/newTab.html
@@ -7,7 +7,6 @@
     <title>New Tab</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/cover.css" />
-    <link rel="stylesheet" href="css/imagemodal.css" />
 </head>
 
 <body class="text-center">
@@ -20,14 +19,16 @@
                 <div class="modal-header">
                     <h5 id="modaldate" class="modal-title" id="exampleModalLongTitle"></h5>
                     <div type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><i class="fa fa-times fa-lg" aria-hidden="true"></i></span>
+                        <span class="hoverdarken" aria-hidden="true"><i class="fa fa-times fa-lg" aria-hidden="true"></i></span>
                     </div>
                 </div>
                 <div class="modal-body">
+                    <a id="modalhdurl" target="_blank">
                     <img id="modalimage" class="modal-content" id="img01" />
+                    </a>
                     <h5 id="modaltitle"></h5>
                     <p id="modaldescription"></p>
-                    <a href="facebook.com"><i class="fa fa-info-circle" aria-hidden="true"></i> More Info</a>
+                    <a id="apodURL" target="_blank"><i class="fa fa-info-circle" aria-hidden="true"></i> More Info</a>
                 </div>
             </div>
         </div>
@@ -50,7 +51,7 @@
         <main role="main" class="inner cover">
             <div class="row mb-4">
                 <div class="col-auto align-self-center">
-                    <div id="left" class="favorite">
+                    <div id="left" class="hoverdarken">
                         <i class="fa fa-chevron-left fa-lg"></i>
                     </div>
                 </div>
@@ -60,7 +61,7 @@
                 </div>
 
                 <div class="col-auto align-self-center">
-                    <div id="right" class="favorite">
+                    <div id="right" class="hoverdarken">
                         <i class="fa fa-chevron-right fa-lg"></i>
                     </div>
                 </div>
