--- a/popup.html
+++ b/popup.html
@@ -10,13 +10,9 @@
 </head>
 
 <body>
-    <!-- Card -->
     <div class="card weather-card" style="min-width: 24rem;">
-        <!-- Card content -->
-        <div class="card-body pb-3">
-            <!-- Title -->
+        <div class="card-body pb-2">
             <h4 class="card-title">Warsaw</h4>
-            <!-- Text -->
             <p class="card-text">Mon, 12:30 PM, Mostly Sunny</p>
             <div class="d-flex justify-content-between">
                 <p class="display-1 ">
@@ -29,7 +25,7 @@
                 <p>
                     <i class="fa fa-sun-o fa-lg text-warning pr-2"></i>44:44 am Sunrise
                 </p>
-                <p><i class="fa fa-tint fa-lg text-info pr-2"></i>3% Precipitation</p>
+                <p><i class="fa fa-tint fa-lg text-primary pr-2"></i>3% Precipitation</p>
             </div>
 
             <div class="d-flex justify-content-between mb-0">
@@ -59,7 +55,7 @@
                                 <p class="mb-1">19°<span class="text-muted">/10°</span></p>
                             </td>
                             <td class="float-right mr-3">
-                                <i class="fa fa-cloud-sun-rain-o fa-lg text-info"></i>
+                                <i class="fa fa-snowflake-o fa-lg text-info"></i>
                             </td>
                         </tr>
                         <tr>
@@ -68,7 +64,7 @@
                                 <p class="mb-1">23°<span class="text-muted">/15°</span></p>
                             </td>
                             <td class="float-right mr-3">
-                                <i class="fa fa-sun-o fa-lg amber-text"></i>
+                                <i class="fa fa-bolt fa-lg text-warning"></i>
                             </td>
                         </tr>
                         <tr>
@@ -77,7 +73,7 @@
                                 <p class="mb-1">26°<span class="text-muted">/19°</span></p>
                             </td>
                             <td class="float-right mr-3">
-                                <i class="fas fa-sun fa-lg amber-text"></i>
+                                <i class="fa fa-tint fa-lg text-primary"></i>
                             </td>
                         </tr>
                         <tr>
@@ -86,7 +82,7 @@
                                 <p class="mb-1">20°<span class="text-muted">/16°</span></p>
                             </td>
                             <td class="float-right mr-3">
-                                <i class="fa fa-cloud fa-lg text-info"></i>
+                                <i class="fa fa-cloud fa-lg text-muted"></i>
                             </td>
                         </tr>
                         <tr>
