adds weather feature to popup

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="card" style="width: 24rem;">
+    <div class="card" style="width: 24rem; border: none;">
         <div class="card-body pb-2">
             <h4 id="city" class="card-title"></h4>
             <p id="current-weather-description" class="card-subtitle"></p>
