Fixes collapse and expand button

--- a/popup.html
+++ b/popup.html
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="card-footer">
-            <a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+            <a id="togglebutton" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                 aria-controls="collapseExample">
                 Expand
             </a>
